[gd_scene load_steps=8 format=3 uid="uid://dss6ihk74bphr"]

[ext_resource type="Script" path="res://scenes/user_interface/user_interface.gd" id="1_7p11o"]
[ext_resource type="Theme" uid="uid://bx3rgbhg0k4eg" path="res://assets/gui/main_gui.tres" id="2_5uwj1"]
[ext_resource type="LabelSettings" uid="uid://dboemsyi3qqex" path="res://assets/gui/credits_body_small_label_settings.tres" id="3_1wy0s"]
[ext_resource type="PackedScene" uid="uid://b3wvduy77hk5t" path="res://scenes/user_interface/settings_panel_container.tscn" id="3_5fxiv"]
[ext_resource type="PackedScene" uid="uid://c2lg2741coag5" path="res://scenes/user_interface/counter_container.tscn" id="3_q1ing"]
[ext_resource type="PackedScene" uid="uid://b62lhg1okvmgn" path="res://scenes/user_interface/credits.tscn" id="6_nn11o"]

[sub_resource type="LabelSettings" id="LabelSettings_4g40l"]
font_size = 14

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_7p11o")

[node name="MainGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_5uwj1")

[node name="GUI" type="Control" parent="MainGUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="StatusLabel" type="Label" parent="MainGUI/GUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -134.0
offset_right = 134.0
offset_bottom = 19.0
grow_horizontal = 2
size_flags_vertical = 0
text = "..."
label_settings = ExtResource("3_1wy0s")
horizontal_alignment = 1

[node name="TopLeftMarginContainer" type="MarginContainer" parent="MainGUI/GUI"]
layout_mode = 1
offset_right = 110.0
offset_bottom = 62.0
size_flags_horizontal = 0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainGUI/GUI/TopLeftMarginContainer"]
layout_mode = 2

[node name="DayPanelContainer" type="PanelContainer" parent="MainGUI/GUI/TopLeftMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainGUI/GUI/TopLeftMarginContainer/VBoxContainer/DayPanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="DayLabel" type="Label" parent="MainGUI/GUI/TopLeftMarginContainer/VBoxContainer/DayPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Day: 0"
horizontal_alignment = 1

[node name="CurrentDateLabel" type="Label" parent="MainGUI/GUI/TopLeftMarginContainer/VBoxContainer/DayPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "March, 10, 2023"
label_settings = SubResource("LabelSettings_4g40l")
horizontal_alignment = 1

[node name="TrueCountdownLabel" type="Label" parent="MainGUI/GUI/TopLeftMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "The countdown 
ended on
Aug 24, 2023!"
label_settings = ExtResource("3_1wy0s")

[node name="TopRightMarginContainer" type="MarginContainer" parent="MainGUI/GUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -105.0
offset_bottom = 38.0
grow_horizontal = 0
size_flags_horizontal = 8
mouse_filter = 2

[node name="CounterPanelContainer" type="PanelContainer" parent="MainGUI/GUI/TopRightMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="EatenCounterLabel" type="Label" parent="MainGUI/GUI/TopRightMarginContainer/CounterPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Eaten: 0"
horizontal_alignment = 2

[node name="BottomLeftMarginContainer" type="MarginContainer" parent="MainGUI/GUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -25.0
offset_right = 82.0
grow_vertical = 0
size_flags_horizontal = 8
mouse_filter = 2

[node name="CreditsButton" type="Button" parent="MainGUI/GUI/BottomLeftMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Credits"
flat = true
icon_alignment = 1

[node name="BottomRightMarginContainer" type="MarginContainer" parent="MainGUI/GUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -225.0
offset_top = -197.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MainGUI/GUI/BottomRightMarginContainer"]
layout_mode = 2
alignment = 2

[node name="MenuButton" type="CheckButton" parent="MainGUI/GUI/BottomRightMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
theme_override_font_sizes/font_size = 20
text = "Menu"
flat = true
alignment = 2

[node name="TabContainer" type="TabContainer" parent="MainGUI/GUI/BottomRightMarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(225, 160)
layout_mode = 2
size_flags_vertical = 8
tab_alignment = 2

[node name="Cheese" type="TabBar" parent="MainGUI/GUI/BottomRightMarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="CounterContainer" parent="MainGUI/GUI/BottomRightMarginContainer/VBoxContainer/TabContainer/Cheese" node_paths=PackedStringArray("gui") instance=ExtResource("3_q1ing")]
layout_mode = 1
gui = NodePath("../../../../../../..")

[node name="Settings" type="TabBar" parent="MainGUI/GUI/BottomRightMarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="SettingsPanelContainer" parent="MainGUI/GUI/BottomRightMarginContainer/VBoxContainer/TabContainer/Settings" instance=ExtResource("3_5fxiv")]
layout_mode = 1

[node name="Credits" parent="MainGUI" node_paths=PackedStringArray("gui") instance=ExtResource("6_nn11o")]
unique_name_in_owner = true
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 70.0
offset_top = 180.0
offset_right = 570.0
offset_bottom = 180.0
gui = NodePath("../GUI")
